--- a/.gitattributes
+++ b/.gitattributes
@@ -2,4 +2,5 @@ Deep_Learning/Homework[[:space:]]1.zip filter=lfs diff=lfs merge=lfs -text
 Deep_Learning/Homework[[:space:]]1/skeleton_code/intel_landscapes.npz filter=lfs diff=lfs merge=lfs -text
 1[[:space:]]-[[:space:]]Deep[[:space:]]Learning/Homework[[:space:]]1.zip filter=lfs diff=lfs merge=lfs -text
 1[[:space:]]-[[:space:]]Deep[[:space:]]Learning/Homework[[:space:]]1/skeleton_code/intel_landscapes.npz filter=lfs diff=lfs merge=lfs -text
+*.npz filter=lfs diff=lfs merge=lfs -text
 1[[:space:]]-[[:space:]]Deep[[:space:]]Learning/Homework[[:space:]]2/hw2_skeleton_code/hw2-q2/intel_landscapes.npz filter=lfs diff=lfs merge=lfs -text
