Missing stuff modificado

--- a/3 - Systems Programming/Project/.vscode/settings.json
+++ b/3 - Systems Programming/Project/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.associations": {
-        "protocol.h": "c"
+        "protocol.h": "c",
+        "space-high-scores.C": "cpp"
     }
 }
