--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,4 @@ Deep_Learning/Homework[[:space:]]1/skeleton_code/intel_landscapes.npz filter=lfs
 *.npz filter=lfs diff=lfs merge=lfs -text
 1[[:space:]]-[[:space:]]Deep[[:space:]]Learning/Homework[[:space:]]2/hw2_skeleton_code/hw2-q2/intel_landscapes.npz filter=lfs diff=lfs merge=lfs -text
 *.pdf filter=lfs diff=lfs merge=lfs -text
+*.crdownload filter=lfs diff=lfs merge=lfs -text
