--- a/01 - CSPH/Projects/lab1B_kit/fake_intrinsics/Makefile
+++ b/01 - CSPH/Projects/lab1B_kit/fake_intrinsics/Makefile
@@ -4,8 +4,8 @@ CFLAGS = -std=c++20
 # Define the name of the output executable
 EXECUTABLE = my_program
 
-all: main.cpp fake_intrinsics.h
-	$(CC) $(CFLAGS) main.cpp -o $(EXECUTABLE) fake_intrinsics.h
+all: main.cpp fake_intrinsics.h stats.h
+	$(CC) $(CFLAGS) main.cpp -o $(EXECUTABLE)
 
 run:
 	./$(EXECUTABLE)
